--- a/index.html
+++ b/index.html
@@ -1133,7 +1133,7 @@
                     I'm always open to discussing new projects, creative ideas, or opportunities to be part of your vision.
                 </p>
                 <div class="contact-links">
-                    <a href="/cdn-cgi/l/email-protection#92ffe7e8f3fffffbfebcf6f7e4a6a4d2f5fff3fbfebcf1fdff" class="contact-link">
+                    <a href="mailto:muzammil.dev46@gmail.com" class="contact-link">
                         <svg class="contact-icon" fill="currentColor" viewBox="0 0 24 24">
                             <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
                         </svg>
@@ -1169,7 +1169,7 @@
         </p>
     </footer>
 
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
+    <script>
         // Active navigation on scroll
         const sections = document.querySelectorAll('.section, .hero');
         const navLinks = document.querySelectorAll('.nav-links a');
