--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Portfolio Version: 2.0 - Email Fixed (mailto) - Updated: Feb 2025 -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
