adding new projects

--- a/index.html
+++ b/index.html
@@ -935,7 +935,7 @@
     <!-- Navigation -->
     <nav>
         <div class="nav-container">
-            <div class="logo">MUHAMMAD MUZAMMIL</div>
+            <div class="logo">MUZAMMIL</div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
@@ -1247,6 +1247,63 @@
 
             <div class="project-card">
                 <div class="project-header">
+                    <div class="project-name">Web-Based AI Agent</div>
+                    <div class="project-date">2024</div>
+                </div>
+                <div class="project-body">
+                    <p class="project-description">
+                        Intelligent web-based agent using Streamlit and OpenAI API for automated task execution. Features interactive UI with natural language processing capabilities.
+                    </p>
+                    <div class="project-tech">
+                        <span class="tech-badge">Streamlit</span>
+                        <span class="tech-badge">OpenAI API</span>
+                        <span class="tech-badge">Python</span>
+                        <span class="tech-badge">AI Agent</span>
+                    </div>
+                    <a href="https://github.com/muhammadmuzammil-dev/web_base_agent" target="_blank" class="btn btn-primary" style="margin-top: 1.5rem; display: inline-block; padding: 0.8rem 1.5rem; font-size: 0.85rem;">View on GitHub</a>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <div class="project-header">
+                    <div class="project-name">GPT Tokenization</div>
+                    <div class="project-date">2024</div>
+                </div>
+                <div class="project-body">
+                    <p class="project-description">
+                        Deep dive into tokenization techniques for NLP models. Jupyter notebook demonstrating token merging, encoding methods, and practical applications in GPT-style models.
+                    </p>
+                    <div class="project-tech">
+                        <span class="tech-badge">Python</span>
+                        <span class="tech-badge">NLP</span>
+                        <span class="tech-badge">Tokenization</span>
+                        <span class="tech-badge">Jupyter</span>
+                    </div>
+                    <a href="https://github.com/muhammadmuzammil-dev/gpt_tokenization" target="_blank" class="btn btn-primary" style="margin-top: 1.5rem; display: inline-block; padding: 0.8rem 1.5rem; font-size: 0.85rem;">View on GitHub</a>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <div class="project-header">
+                    <div class="project-name">Node.js CI/CD Pipeline</div>
+                    <div class="project-date">2026</div>
+                </div>
+                <div class="project-body">
+                    <p class="project-description">
+                        Complete CI/CD implementation for Node.js applications with automated testing, building, and deployment workflows using GitHub Actions.
+                    </p>
+                    <div class="project-tech">
+                        <span class="tech-badge">Node.js</span>
+                        <span class="tech-badge">CI/CD</span>
+                        <span class="tech-badge">GitHub Actions</span>
+                        <span class="tech-badge">DevOps</span>
+                    </div>
+                    <a href="https://github.com/muhammadmuzammil-dev/node-application-deploy-cicd" target="_blank" class="btn btn-primary" style="margin-top: 1.5rem; display: inline-block; padding: 0.8rem 1.5rem; font-size: 0.85rem;">View on GitHub</a>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <div class="project-header">
                     <div class="project-name">One Plan</div>
                     <div class="project-date">December 2024 - Present</div>
                 </div>
@@ -1371,10 +1428,10 @@
                 btnText: 'Open Email App'
             },
             phone: {
-                value: '+92-303-5516507',
+                value: '+92-300-9093705',
                 title: 'Phone Number',
                 icon: '<svg fill="currentColor" viewBox="0 0 24 24"><path d="M20 15.5c-1.25 0-2.45-.2-3.57-.57-.35-.11-.74-.03-1.02.24l-2.2 2.2c-2.83-1.44-5.15-3.75-6.59-6.59l2.2-2.21c.28-.26.36-.65.25-1C8.7 6.45 8.5 5.25 8.5 4c0-.55-.45-1-1-1H4c-.55 0-1 .45-1 1 0 9.39 7.61 17 17 17 .55 0 1-.45 1-1v-3.5c0-.55-.45-1-1-1z"/></svg>',
-                link: 'tel:+923035516507',
+                link: 'tel:+923009093705',
                 btnText: 'Call Now'
             }
         };
