--- a/index.html
+++ b/index.html
@@ -1232,7 +1232,7 @@
     <!-- Navigation -->
     <nav>
         <div class="nav-container">
-            <div class="logo">MUHAMMAD MUZAMMIL</div>
+            <div class="logo">MUZAMMIL</div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
@@ -1761,7 +1761,7 @@
 
     <script>
         // Chatbot Configuration
-        const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyb2Qj_yFBuj7PHCEkRQviZVSF7GGD1fYhxuZIloKwEXKwMVIQjFSaqn7gOqYgM8zdEKA/exec';
+        const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbxVX4_yvQQCGmFltrApngReJ-VCt-XVI9BgGJUfVC2GVVNBB18BoiEzvOwd8Kc_QMTQNA/exec';
         
         let chatState = {
             step: 0,
