--- a/index.html
+++ b/index.html
@@ -1232,7 +1232,7 @@
     <!-- Navigation -->
     <nav>
         <div class="nav-container">
-            <div class="logo">MUZAMMIL</div>
+            <div class="logo">MUHAMMAD MUZAMMIL</div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
